# buildstr

./: Cargo.toml
.github/workflows/: test.yml
buildstr/: Cargo.toml  TYPES_NOT_EXACT.md  TYPES_NOT_IMPLEMENTED.md
buildstr/src/: alloc.rs  any.rs  arch.rs  array.rs  ascii.rs  borrow.rs  char.rs  cmp.rs  convert.rs  ffi.rs  fmt.rs  lib.rs  marker.rs  net.rs  num.rs  ops.rs  path.rs  primitive.rs  primitives.rs  process.rs  str.rs  string.rs  time.rs
buildstr/src/__private/: mod.rs  unescape.rs
buildstr/src/_std/: alloc.rs  arch.rs  ascii.rs  cmp.rs  collections.rs  convert.rs  env.rs  error.rs  ffi.rs  fmt.rs  mod.rs  net.rs  num.rs  path.rs  process.rs
buildstr/tests/: array.rs  ascii.rs  borrow.rs  char.rs  collections.rs  convert.rs  custom_impl.rs  enums.rs  env.rs  error.rs  ffi.rs  fmt.rs  fs.rs  future.rs  generics.rs  named.rs  optionresult.rs  pin.rs  proc_macro.rs  reference.rs
buildstr_derive/: Cargo.toml
buildstr_derive/src/: lib.rs
