[package]
name = "buildstr"
description = "Get the builder of your values as a String. Useful for macros."
keywords = ["buildstr", "builder", "string", ""]
version = "0.1.0"
edition = "2021"
authors = ["Liam Garriga <liam@garriga.dev>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buildstr_derive = { version = "0.1.0", path = "../buildstr_derive", features = [] }
syn = { version = "2.0.29", optional = true, features = ["parsing"] }
prettier-please = { version = "0.2.0", optional = true }

[features]
default = ["derive", "prelude", "cow", "time", "collections", "pretty"]
derive = ["buildstr_derive/derive"]

pretty = ["syn", "prettier-please", "buildstr_derive/pretty"]

prelude = ["buildstr_derive/prelude"]
cell = ["buildstr_derive/cell"]
collections = ["buildstr_derive/collections"]
cow = ["buildstr_derive/cow"]
time = ["buildstr_derive/time"]