[package]
name = "buildstr"
description = "Get the builder of your values as a String. Useful for macros."
keywords = ["buildstr", "builder", "string", ""]
version = "0.1.0"
edition = "2021"
authors = ["Liam Garriga <liam@garriga.dev>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buildstr_derive = { version = "0.1.0", path = "../buildstr_derive" }
syn = { version = "2.0.29", optional = true, features = ["parsing"], default-features = false }
prettier-please = { version = "0.2.0", optional = true }
proc-macro2 = { version = "1.0.66", optional = true, default-features = false }
aho-corasick = { version = "1.0.5", default-features = false, features = ["std"] }

[features]
default = ["derive", "prelude", "extra", "pretty"]
derive = ["buildstr_derive/derive"]
proc-macro = ["buildstr_derive/proc-macro", "proc-macro2"]

pretty = ["syn", "prettier-please", "buildstr_derive/pretty"]

prelude = ["buildstr_derive/prelude"]
extra = ["buildstr_derive/extra"]

[[test]]
name = "proc_macro"
required-features = ["proc-macro"]
proc-macro = true
