[package]
name = "buildstr_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = { version = "1.0.33", optional = true }
syn = { version = "2.0.29", optional = true, default-features = false, features = ["derive", "parsing", "proc-macro", "printing"] }
proc-macro2 = { version = "1.0.66", optional = true }
prettier-please = { version = "0.2.0", optional = true }

[features]
derive = ["quote", "syn", "proc-macro2"]

proc-macro = ["proc-macro2"]

pretty = []

prelude = []
collections = []
extra = []
ffi = []

[dev-dependencies]
num-bigint = "0.4.4"
buildstr = { version = "0.1.0", path = "../buildstr" }

[lib]
proc-macro = true
